feat: fix mistakes in Timetable class